--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -42,6 +42,19 @@ main{
         background-image: url(../img/fondogris2.jpg);
         background-repeat: no-repeat;
         background-size: cover;
+        padding: 30px;
+        section{
+            div{
+                a{
+                    text-decoration: none;
+                    background-color: rgba(0, 0, 0, 0.43);
+                    color: white;
+                    &:hover{
+                        background-color: rgb(0, 0, 0);
+                    }
+                }
+            }
+        }
     }
 footer{
         background-image: url(../img/fondonuevo4.png);
