--- a/css/style.css
+++ b/css/style.css
@@ -485,7 +485,7 @@ nav{
 /*!--------------------PAGINA OFERTAS--------------------------*/
 
 
-.titulodeofertas{
+/* .titulodeofertas{
     font-family: sss;
     font-size: 50px;
     text-align: center;
@@ -498,19 +498,19 @@ nav{
     animation-name: slidefromleft;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
-}
+} */
 
 
 
-.juegosofertas3{
+/* .juegosofertas3{
     width: 100%;
     margin-top: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 35px;
-}
+} */
 
-.juegosofertas3 div{  
+/* main .juegosofertas3 div{  
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 15px;
     text-align: center;
@@ -521,24 +521,24 @@ nav{
     margin-top: 50px;
     padding: 3px;
     transition: 1s;
-}
+} */
 
 
 
-.juegosofertas3 div img{
+/* main .juegosofertas3 div img{
     width: 100%;
     height: 65%;
 }
+ */
 
-
-.juegosofertas3 div:hover{
+/* main .juegosofertas3 div:hover{
     background-color: rgb(45, 157, 45);
     transform: scale(1.1)
-}
-
-.juegosofertas3 span{
+} */
+/* 
+main .juegosofertas3 span{
     color: #F00;
-}
+} */
 
 /* 
 main section div a{
