--- a/css/estilos.css
+++ b/css/estilos.css
@@ -216,11 +216,11 @@ footer div {
     height: 275px; }
   body main .juegosofertas3 {
     grid-template-columns: repeat(2, 1fr); }
-  .tituloform h2 {
+  main .tituloform h2 {
     font-size: 40px; }
-  .maincontact h2 {
+  main .maincontact h2 {
     font-size: 30px; }
-  .maincontact label {
+  main .maincontact label {
     font-size: 25px; } }
 
 @media screen and (max-width: 530px) {
@@ -270,9 +270,9 @@ footer div {
     font-size: 10px; }
   main .container .row .col p {
     font-size: 7px; }
-  .maincontact label {
+  main .maincontact label {
     font-size: 20px; }
-  .maincontact select {
+  main .maincontact select {
     inline-size: 250px; } }
 
 /*!---------------------PAGINA CATEGORIAS------------------------*/
@@ -390,3 +390,28 @@ main section .col {
     font-size: 20px;
     color: rgba(237, 226, 226, 0.84);
     margin: 10px; }
+
+/*!---------------------PAGINA CONTACTENOS-----------------------*/
+main .tituloform {
+  font-family: sss;
+  font-size: 50px;
+  text-align: center;
+  color: #FFFFFF;
+  background: #912C22;
+  text-shadow: 0 0 10px #FFFFFF;
+  color: #FFFFFF;
+  background: #232323;
+  border: #058a9e 3px solid;
+  animation-name: slidefromleft;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out; }
+
+main .maincontact {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgba(0, 0, 0, 0.523);
+  text-align: center;
+  font-size: 32px; }
+  main .maincontact select {
+    block-size: 30px; }
