--- a/scss/base/_media-query.scss
+++ b/scss/base/_media-query.scss
@@ -6,38 +6,38 @@
 
 
 @media screen and (max-width:950px){
-    main .juegos3{
+    body main .juegos3{
         grid-template-columns: repeat(3, 1fr);
     }
-    main .juegos3 div{
+    body main .juegos3 div{
         font-size: 13px;
     }
 
-    main .juegosofertas3 .h3h4a{
+    body main .juegosofertas3 .h3h4a{
         font-size: 10px;
     }
-    main .titulodeofertas h2{
+    body main .titulodeofertas h2{
         font-size: 40px;
     }
 }
 
 @media screen and (max-width:650px){
-    main .bienvenidos{
+    body main .bienvenidos{
         font-size: 30px;
     }
-    main .juegos3{
+    body main .juegos3{
         grid-template-columns: repeat(2, 1fr);
     }
-    main .juegos3 div{
+    body main .juegos3 div{
         font-size: 15px;
     }
-    main .juegodelacontainer .juegodela a{
+    body main .juegodelacontainer .juegodela a{
         font-size: 25px;
     }
-    header .hero h1{
+    body header .hero h1{
         font-size: 55px;
     }
-    header nav ul {
+    body header nav ul {
         margin: 50px;
         font-size: 20px;
     }
@@ -48,89 +48,89 @@
     body main .juegosofertas3{
         grid-template-columns: repeat(2, 1fr);
     }
-    main .tituloform h2{
+    body main .tituloform h2{
         font-size: 40px;
     }
-    main .maincontact h2{
+    body main .maincontact h2{
         font-size: 30px;
     }
-    main .maincontact label{
+    body main .maincontact label{
         font-size: 25px;
     }
 }
 
 @media screen and (max-width:530px){
-    header .hero h1{
+    body header .hero h1{
         font-size: 55px;
     }
-    header nav ul{
+    body header nav ul{
         margin: 50px;
     }
-    main .juegos3 div{
+    body main .juegos3 div{
         font-size: 10px;
     }
-    main .juegodelacontainer .juegodela a{
+    body main .juegodelacontainer .juegodela a{
         font-size: 20px;
     }
     iframe{
         width: 300px;
         height: 250px;
     }
-    main .titulodeofertas h2{
+    body main .titulodeofertas h2{
         font-size: 30px;
     }
-    main .juegos3 div{
+    body main .juegos3 div{
         font-size: 8px;
     }
-    main .container .row .col h3{
+    body main .container .row .col h3{
         font-size: 15px;
     }
-    main .container .row .col p{
+    body main .container .row .col p{
         font-size: 10px;
         margin: 0%;
     }
 }
 
 @media screen and (max-width:450px) {
-    main .bienvenidos{
+    body main .bienvenidos{
         font-size: 20px;
     }
-    header{
+    body header{
         height: 130px;
     }
-    header nav ul{
+    body header nav ul{
         font-size: 15px;
         margin: 50px;
     }
-    header .hero h1{
+    body header .hero h1{
         font-size: 40px;
     }
-    main .juegodelacontainer .juegodela a{
+    body main .juegodelacontainer .juegodela a{
         font-size: 15px;
     }
-    main .juegodelacontainer .titulovideo h3{
+    body main .juegodelacontainer .titulovideo h3{
         font-size: 15px;
     }
     iframe{
         width: 250px;
         height: 200px;
     }
-    main .juegosofertas3 .h3h4a{
+    body main .juegosofertas3 .h3h4a{
         font-size: 7px;
     }
-    main .titulodeofertas h2{
+    body main .titulodeofertas h2{
         font-size: 25px;
     }
-    main .container .row .col h2{
+    body main .container .row .col h2{
         font-size: 10px;
     }
-    main .container .row .col p{
+    body main .container .row .col p{
         font-size: 7px;
     }
-    main .maincontact label{
+    body main .maincontact label{
         font-size: 20px;
     }
-    main .maincontact select{
+    body main .maincontact select{
         inline-size: 250px;
     }
 }
