--- a/scss/components/_categorias.scss
+++ b/scss/components/_categorias.scss
@@ -50,6 +50,10 @@ main{
                     }
             }
     }
+    .carousel{
+        margin-top: 100px;
+        padding: 100px;
+    }
     .paginas{
         display: flex;
         justify-content: center;
